# carbontracker-ml

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  predict.py  pyproject.toml  requirements-dev.txt  requirements.txt  train.py
.github/workflows/: ci.yml
api/: app.py
data/: category_factors.csv
data/sample/: items_sample.csv  receipt_lines_sample.csv
reports/: confusion.csv  metrics.json
scripts/: build_factors.py  evaluate.py  ocr_receipt.py  predict.py  score_receipt.py  train.py
src/carbontracker/: __init__.py  cli.py  config.py  engine.py  factors.py  model.py  ocr.py  receipt_cleaning.py
tests/: test_engine.py  test_receipt_cleaning.py
