[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "carbontracker"
version = "0.1.0"
description = "Receipt line-item classifier + spend-based CO2e estimator"
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.0",
  "scikit-learn>=1.2",
  "joblib>=1.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
